# python-app-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  explanation.html  how-to-guides.html  index.html  main.py  mkdocs.yaml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: build.yaml  lint.yaml  orchestrator.yaml  pages.yaml  release.yaml  test.yaml
docs/: explanation.md  index.md  reference.md  tutorials.md
search/: search_index.json
src/python_app_template/: app.py  cli.py  service.py
tests/: test_app.py  test_main.py
