[tool.poetry]
name = "python_app_template"
version = "0.2.0"
description = ""
authors = ["Tom Harrison <tomharrisonjr@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12.1"
requests = "^2.31.0"
httpx = "^0.26.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-sugar = "^0.9.7"
respx = "^0.20.2"
pytest-asyncio = "^0.23.3"
trio = "^0.23.2"
pytest-cov = "^4.1.0"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivate pytest caching

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.4.0"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.12"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
